update for recursion

--- a/projekt/chessai/index.html
+++ b/projekt/chessai/index.html
@@ -28,9 +28,10 @@
     <div id="pgn"></div>
     <label>Moves:</label>
     <div id="mvs"></div>
-    <input type="button" value="GetInfo" onclick="getScore()" />
+    <label>Points:</label>
+    <div id="points"></div>
   </body>
 </html>
 
 <script src="board.js"></script>
-<script src="test.js"></script>
+<script src="bot.js"></script>
